claudie-backend-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: in-claudie-backend-srv
  namespace: claudie-backend
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: claudie-backend-srv
            port:
              number: 3000
      - path: /k8s/secrets
        pathType: Prefix
        backend:
          service:
            name: claudie-backend-srv
            port:
              number: 3000
      - path: /k8s/inputmanifests
        pathType: Prefix
        backend:
          service:
            name: claudie-backend-srv
            port:
              number: 3000
      - path: /k8s/secret-types
        pathType: Prefix
        backend:
          service:
            name: claudie-backend-srv
            port:
              number: 3000
      - path: /k8s/kubernetes
        pathType: Prefix
        backend:
          service:
            name: claudie-backend-srv
            port:
              number: 3000
